# streaming-video-classifier

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/video-consumer/: .env  Dockerfile  requirements.txt
apps/video-consumer/config/: consumer.yml  mongodb.yml  resnet50.yml
apps/video-consumer/src/: main.py  utils.py
apps/video-producer/: .env  Dockerfile  requirements.txt
apps/video-producer/config/: producer.yml
apps/video-producer/src/: main.py  utils.py
config/: consumer.yml  producer.yml  topic.yml
kubernetes/: kafka-broker.yaml  mongodb.yaml  video-consumer.yaml  video-producer.yaml  zookeeper.yaml
src/kafka/: consumer.py  producer.py  topic.py
src/utils/: config.py  logging.py  mongo.py  utils.py
